<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="309dp"
        android:layout_height="237dp"
        android:layout_gravity="start|top"
        android:paddingStart="16dp"
        android:paddingTop="25dp"
        android:text="@string/movement_detector"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:paddingBottom="40dp"
        android:text="@string/adjust"
        android:textAlignment="center"
        android:textSize="21sp" />

    <SeekBar
        android:id="@+id/thresholdSeekBar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_margin="10dp"
        android:max="100"
        android:paddingBottom="16dp"
        android:progress="20" />

    <TextView
        android:id="@+id/thresholdValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_threshold"
        android:textAlignment="center"
        android:textSize="21sp" />

</LinearLayout>